--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Gallery</title>
-  <link rel="icon" type="image/x-icon" href="logo.jpg">
+  <link rel="icon" type="image/x-icon" href="img/logo.jpg">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
     *{
